fixed floating banner on mobile

--- a/themes/newtheme/source/css/post.styl
+++ b/themes/newtheme/source/css/post.styl
@@ -151,6 +151,10 @@ article.post-content
     position fixed
     z-index 9999
 
+    @media phone
+      display none !important
+      opacity 0
+
 
 #toc
   roboto()
